--- a/javascripts/discourse/components/welcome-link-banner.hbs
+++ b/javascripts/discourse/components/welcome-link-banner.hbs
@@ -17,7 +17,7 @@
                 }}
               >
                 <h3>
-                  {{d-icon bl.icon}}
+                  <img src="{{bl.icon}}"/>                  
                   {{bl.text}}
                 </h3>
               </a>
